# snipster

./: .gitignore  LICENSE  pyproject.toml  rxconfig.py
src/snipster/: __main__.py  api.py  cli.py  exceptions.py  models.py  repo.py  snipster.py
src/snipster/ui/: navbar.py  snippets.py
tests/: conftest.py  test_api.py  test_cli.py  test_model.py  test_repo.py
