[project]
name = "snipster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben Griffith", email = "bengriffith@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sqlmodel>=0.0.24",
]

[project.scripts]
snipster = "snipster:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
